# Spotify-Music

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  cloudbuild.yaml  main.py  pyproject.toml  requirement.txt  requirements.txt  setup.py
.devcontainer/: devcontainer.json
data/raw/: spotify_songs_isolated_sample.csv
docs/: Makefile  conf.py  index.rst  make.bat
lightning_logs/version_0/: hparams.yaml  metrics.csv
lightning_logs/version_1/: hparams.yaml  metrics.csv
lightning_logs/version_10/: hparams.yaml  metrics.csv
lightning_logs/version_11/: hparams.yaml  metrics.csv
lightning_logs/version_12/: hparams.yaml  metrics.csv
lightning_logs/version_13/: hparams.yaml  metrics.csv
lightning_logs/version_14/: metrics.csv
lightning_logs/version_15/: hparams.yaml  metrics.csv
lightning_logs/version_16/: hparams.yaml  metrics.csv
lightning_logs/version_17/: hparams.yaml  metrics.csv
lightning_logs/version_18/: hparams.yaml  metrics.csv
lightning_logs/version_19/: hparams.yaml  metrics.csv
lightning_logs/version_2/: hparams.yaml  metrics.csv
lightning_logs/version_20/: metrics.csv
lightning_logs/version_21/: metrics.csv
models/: deep_learning_optuna_model.joblib
notebooks/: causal_analysis.ipynb  data_preprocessing.ipynb  feature_engineering.pkl  load_pipeline.ipynb  modeling.ipynb  predictive_model.ipynb  predictive_model_FINAL.ipynb  predictive_model_FINAL_mlflow.ipynb
scratch/: Data_Preprocessing.ipynb  causal_analysis.ipynb  eda.ipynb  model.ipynb
src/data/: make_dataset.py
tests/: test_top_artist_transformer.py
(+83 files in other folders)
