[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Spotify-Music"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
click = "*"
Sphinx = "*"
coverage = "*"
awscli = "*"
flake8 = "*"
python-dotenv = ">=0.5.1"
dowhy = "0.11.1"
lightgbm = "4.3.0"
matplotlib = "3.7.1"
missingno = "0.5.2"
numpy = "1.24.4"
pandas = "2.2.0"
plotly = "5.15.0"
rich = "13.7.0"
scikit_learn = "1.2.2"
seaborn = "0.13.2"
shap = "0.44.1"
xgboost = "2.0.3"
mlflow = "^2.12.1"
optuna = "^3.6.1"
joblib = "^1.4.0"
torch = "^2.2.2"
pytorch-lightning = "^2.2.3"
h2o = "^3.46.0.1"


[tool.poetry.dev-dependencies]
# Add your development dependencies here

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"